# arduino

./: .gitignore
basement_barrier/: basement_barrier.ino  makefile
climate_sensor/: climate_sensor.ino  climate_sensor.ino.save  makefile
debug_template/: debug_template.ino  makefile
fingerkey/: fingerkey.ino  i2c_scanner.ino  keyvalue.cpp  keyvalue.h  makefile  parser.cpp  parser.h  pins.txt  ss_micro_pinout.txt
fingerkey/parser/: parser.ino
fingerkey/parser/Regexp/: bashrc  main.cpp  makefile  parser.Dockerfile  parser.cpp  parser.h  pyproject.toml  testfile.txt  tmux.conf  vimrc
macropad/: i2c_scanner.ino  macropad.ino  makefile  muxmux.cpp  muxmux.h  openocd.cfg
projv4/: .gitignore  makefile  projv4.ino  projv4.ino.elf  projv4.ino.map  projv4.ino.uf2
usbc_switch/: makefile  usbc_switch.ino
