[project]
name = "regexp"
version = "0.1.0"
description = ""
authors = [
    {name = "mdaughtrey",email = "matt@daughtrey.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pipx (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
